fix rotate overlapping issue

--- a/style.css
+++ b/style.css
@@ -27,6 +27,20 @@ body {
     cursor: default;
 }
 
+.picture{
+	margin: auto;
+	display: flex;
+	height:auto;
+	width: 300px;
+}
+
+/*.rotate90 {
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+}*/
 .main-view{
 
   }
